<resources>
    <string name="app_name">MobileJava</string>
    <string name="Btnaccueil">       احجز متجرك الكتروني الأن</string>
    <string name="Search">البحث عن المنتج...</string>
    <string name="typebtn">جميع الفئات</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="strike_text1"><strike>فيد يو اعلا ني</strike></string>
    <string name="strike_text2"><strike>استشارة حول موقع تواصل اجتماعي</strike></string>
    <string name="register">تسجيل الاستمارة</string>
</resources>