<?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Main2Activity"

            >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="65dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintHorizontal_bias="0.117"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="34dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    app:layout_constraintEnd_toStartOf="@+id/imageView4"
                    app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="31dp"
                    android:layout_height="29dp"
                    android:layout_marginEnd="44dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageview5"
                    app:layout_constraintEnd_toStartOf="@+id/imageview5"
                    app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

                <ImageView
                    android:id="@+id/imageview5"
                    android:layout_width="53dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_menu_24" />


                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="319dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="92dp"
                    android:layout_marginEnd="28dp"
                    android:ems="10"
                    android:background="@drawable/forget"
                    android:hint="@string/Search"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="38dp"
                    android:layout_height="39dp"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
                    app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
                    app:layout_constraintVertical_bias="0.0" />


                <Button
                    android:id="@+id/button"
                    android:layout_width="361dp"
                    android:layout_height="64dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/Btnaccueil"
                    android:textColor="#FFFF"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="@+id/button2"
                    app:layout_constraintStart_toStartOf="@+id/button2"
                    app:layout_constraintTop_toBottomOf="@+id/button2"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="357dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/green"
                    android:drawableLeft="@drawable/ic_baseline_menu_244"
                    android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                    android:text="@string/typebtn"
                    android:textAlignment="textStart"
                    android:textColor="#FFFF"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.564"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
                    tools:ignore="TouchTargetSizeCheck" />

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/image_slider"
                    android:layout_width="373dp"
                    android:layout_height="294dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    app:sliderAnimationDuration="1100"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="1100"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="@color/green"
                    app:sliderIndicatorUnselectedColor="@color/black"
                    app:sliderScrollTimeInSec="4"
                    app:sliderStartAutoCycle="true">

                </com.smarteist.autoimageslider.SliderView>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewerpage"
                    android:layout_width="388dp"
                    android:layout_height="351dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="4dp"
                    android:clipToPadding="false"
                    android:foregroundGravity="center"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_slider"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
            <com.google.android.material.navigation.NavigationView
                android:id="@+id/nav"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                app:headerLayout="@layout/nav_header"

                />


        </androidx.drawerlayout.widget.DrawerLayout>

